# cpp-toys

./: .gitignore  .gitpod.yml  CMakeLists.txt  EmployeeTest.cpp  Makefile  README.md  helloworld.cpp  main.cpp
c10/00/: CMakeLists.txt  Derived.cpp
guineapig/: CMakeLists.txt  gp.cpp
kaleidoscope/: CMakeLists.txt  README.md  takeaway.md  toy.cpp
kaleidoscope/ch5/: Makefile  ch5.cpp
kaleidoscope/ch6/: t.cpp
kaleidoscope/ch7/: Makefile  ch7  ch7.cpp  t
kaleidoscope/ch8/: README.md
kaleidoscope/ch9/: ch9
llvm/kaleidoscope/: CMakeLists.txt  README.md
llvm/kaleidoscope/ch4/: ch4.cpp  ch4.sh  t.cpp  t.sh
llvm/kaleidoscope/ch5/: ch5  ch5.sh
llvm/kaleidoscope/ch6/: Makefile  ch6  ch6.cpp  t
llvm/kaleidoscope/ch7/: t  t.cpp
llvm/kaleidoscope/ch8/: Makefile  ch8  ch8.cpp
llvm/kaleidoscope/ch9/: Makefile  ch9.cpp  t  t.cpp
llvm/module-examples/ex1/: CMakeLists.txt  README.md
llvm/module-examples/ex1/gcm.cache/: Hello.gcm
llvm/module-examples/ex1/mybuild/: use
llvm/module-examples/ex1/src/: Hello.cppm
others/: CMakeLists.txt
others/Database/: Database.cpp  Database.h
others/Employee/: Employee.cpp  Employee.h
others/Spreadsheet/: Spreadsheet.cpp  Utility.cpp
others/db/: CMakeLists.txt  README.md  demo.cpp
others/ex1/: helloworld.cpp  main.cpp
others/guineapig/: CMakeLists.txt  gp.cpp
pcpp/Database/: DatabaseTest.cpp
pcpp/Employee/: UserInterface.cpp
pcpp/Spreadsheet/: CMakeLists.txt  SpreadsheetCell.cpp  SpreadsheetCell.h
pcpp6e/: .gitignore  README.md
pcpp6e/Ch00/AirlineTicket/: AirlineTicket.cpp  AirlineTicket.cppm  AirlineTicketTest.cpp  CMakeLists.txt  README.md  hello  main.cpp
pcpp6e/Ch01/01_HelloWorld/: 01_helloworld.cpp  04_input.cpp
pcpp6e/Ch01/02_Namespaces/: hello  usingnamespace.cpp
pcpp6e/Ch01/03_struct/: employee.cppm  structest.cpp
pcpp6e/Ch01/08_SpaceshipOperator/: spaceship.cpp
pcpp6e/Ch01/09_functions/: functions.cpp
pcpp6e/Ch01/10_arrary_vector_pair/: avp.cpp
pcpp6e/Ch01/19_AirlineTicket/: .gitignore  AirlineTicket.cpp  AirlineTicket.cppm  AirlineTicketTest.cpp  README.md
pcpp6e/Ch01/20_Scope/: Scope.cpp
pcpp6e/Ch01/23_const/: const.cpp
pcpp6e/Ch01/26_References/: reference.cpp
pcpp6e/Ch01/27_const_cast/: const.cpp
pcpp6e/Ch01/31_EmployeeDB/: Database.cpp  Database.cppm  DatabaseTest.cpp  Employee.cpp  Employee.cppm  EmployeeTest.cpp  Makefile  UserInterface.cpp
pcpp6e/Ch02/: 03_cpp_string.cpp  Makefile
pcpp6e/Ch07/06_unique_ptr/: Makefile  unique.cpp
pcpp6e/Ch08/: Makefile  SpreadsheetCell.cpp  SpreadsheetCell.cppm  SpreadsheetCellTest.cpp  ctor.cpp  ctor.cppm  initializer_list.cpp  initializer_list.cppm
spreadsheet/: CMakeLists.txt  Spreadsheet.cpp  Spreadsheet.h  SpreadsheetCell.cpp  SpreadsheetCell.h  sp.cpp
